[gd_scene load_steps=3 format=3 uid="uid://dx1idjdhy2hn0"]

[ext_resource type="FontFile" uid="uid://csuju232u5qsn" path="res://art/PixelatedEleganceRegular-ovyAA.ttf" id="1_37p78"]
[ext_resource type="Script" uid="uid://b0krfvy2sgjwr" path="res://hud.gd" id="1_64ctp"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_64ctp")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -21.5
offset_right = 21.5
offset_bottom = 58.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
text = "0"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -575.5
offset_top = -97.0
offset_right = 575.5
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
text = "Squish the Critters!!!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TimerLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_bottom = 58.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.00240158, 0.00171301, 0.00121519, 1)
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
text = "0"

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
